--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="w-[90%] mx-auto sm:max-w-[90%] md:max-w-screen-md lg:max-w-screen-lg xl:max-w-[1170px]">
             <div class="flex">
                 <div class="w-1/2 flex items-center">
-                    <img class="h-5" src="./images/logo.png" alt="Logo">
+                    <img class="h-5" src="/images/logo.png" alt="Logo">
                 </div>
                 <div class="w-1/2 flex">
                     <nav class="w-3/5 h-full max-lg:hidden block">
@@ -87,7 +87,7 @@
                     <div
                         class="max-sm:hidden w-full lg:w-1/2 lg:h-200 rounded-2xl flex justify-center lg:justify-end px-4 lg:pr-20 md:lg:pr-12">
                         <img class="w-full max-w-md lg:w-2/5 object-cover object-[0_10%] rounded-2xl "
-                            src="./images/student.png" alt="">
+                            src="/images/student.png" alt="">
                     </div>
                     <div class="w-full lg:w-1/2 px-4 lg:pl-20 md:lg:pl-12">
                         <h1 class="
@@ -151,7 +151,7 @@
                     <ul class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-5 sm:gap-5 md:gap-5 md:grid-cols-2">
                         <li class="max-w-370 w-370 h-466">
                             <figure class="w-full md:w-[95%]">
-                                <img class="w-full h-278 object-cover rounded-xl" src="./images/basicWebDesign.png"
+                                <img class="w-full h-278 object-cover rounded-xl" src="/images/basicWebDesign.png"
                                     alt="Trulli">
                                 <div class="px-4 mt-3">
                                     <figcaption>
@@ -177,7 +177,7 @@
                         </li>
                         <li class="max-w-370 w-370 h-466">
                             <figure class="w-full md:w-[95%]">
-                                <img class="w-full h-278 object-cover rounded-xl" src="./images/UI_UX.png" alt="Trulli">
+                                <img class="w-full h-278 object-cover rounded-xl" src="/images/UI_UX.png" alt="Trulli">
                                 <div class="px-4 mt-3">
                                     <figcaption>
                                         <div class="flex justify-between">
@@ -201,7 +201,7 @@
                         </li>
                         <li class="max-w-370 w-370 h-466">
                             <figure class="w-full md:w-[95%]">
-                                <img class="w-full h-278 object-cover rounded-xl" src="./images/webAppDesign.png"
+                                <img class="w-full h-278 object-cover rounded-xl" src="/images/webAppDesign.png"
                                     alt="Trulli">
                                 <div class="px-4 mt-3">
                                     <figcaption>
@@ -293,11 +293,11 @@
                     </div>
                     <div
                         class="w-1/2 flex justify-between h-200 pr-9 max-sm:w-full max-sm:pr-0 max-sm:justify-center max-sm:my-10">
-                        <div class="self-end w-64 h-96 bg-[url(./images/learner1.png)] rounded-2xl bg-size-cover bg-no-repeat 
+                        <div class="self-end w-64 h-96 bg-[url(/images/learner1.png)] rounded-2xl bg-size-cover bg-no-repeat 
                             md:max-lg:w-2/4 md:max-lg:h-2/4 md:max-lg:bg-[right_10%_bottom_30%] 
                             ">
                         </div>
-                        <div class="self-start w-64 h-96 bg-[url(./images/learner2.png)] rounded-2xl bg-size-cover bg-no-repeat
+                        <div class="self-start w-64 h-96 bg-[url(/images/learner2.png)] rounded-2xl bg-size-cover bg-no-repeat
                             md:max-lg:w-2/4 md:max-lg:h-2/4 md:max-lg:bg-[right_10%_bottom_40%] max-sm:hidden">
                         </div>
                     </div>
@@ -335,7 +335,7 @@
                         and professional goals with Lesson.</h2>
 
                     <div class="w-full max-sm:block hidden mt-5">
-                        <img class="h-52 w-full object-cover rounded-3xl" src="./images/personalCOurse.png"
+                        <img class="h-52 w-full object-cover rounded-3xl" src="/images/personalCOurse.png"
                             alt="Personal course dashboard">
                     </div>
                     <p class="text-[#5F5B53] font-poppins text-base font-normal leading-7 mt-5">
@@ -346,7 +346,7 @@
                     <button class="w-32 h-12 rounded-3xl bg-[#FFB900] text-white mt-6 max-sm:w-full">Join Now</button>
                 </div>
                 <div class="w-1/2 pl-9 max-sm:hidden">
-                    <img class="h-404 w-full object-cover rounded-3xl" src="./images/personalCOurse.png"
+                    <img class="h-404 w-full object-cover rounded-3xl" src="/images/personalCOurse.png"
                         alt="Personal course dashboard">
                 </div>
             </div>
@@ -369,8 +369,7 @@
                     <ul class="grid grid-cols-3 gap-3 md:max-lg:grid-cols-2 max-sm:grid-cols-1">
                         <li class="w-[calc(20rem+3.125rem)] h-466 bg-white rounded-2xl">
                             <figure class="w-full rounded-2xl">
-                                <img class="w-full h-64 rounded-t-2xl" src="./images/becomeWebDesigner.png"
-                                    alt="Trulli">
+                                <img class="w-full h-64 rounded-t-2xl" src="/images/becomeWebDesigner.png" alt="Trulli">
                                 <figcaption class="pl-11 pt-6 max-sm:pl-0">
                                     <div class="flex items-center">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 6 6"
@@ -396,7 +395,7 @@
                         </li>
                         <li class="w-[calc(20rem+3.125rem)] h-466 bg-white rounded-2xl">
                             <figure class="w-full rounded-2xl">
-                                <img class="w-full h-64 rounded-t-2xl" src="./images/webDesigner2.png" alt="Trulli">
+                                <img class="w-full h-64 rounded-t-2xl" src="/images/webDesigner2.png" alt="Trulli">
                                 <figcaption class="pl-11 pt-6 max-sm:pl-0">
                                     <div class="flex items-center">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 6 6"
@@ -422,7 +421,7 @@
 
                         <li class="w-[calc(20rem+3.125rem)] h-466 bg-white rounded-2xl">
                             <figure class="w-full rounded-2xl">
-                                <img class="w-full h-64 rounded-t-2xl" src="./images/webDesigner3.png" alt="Trulli">
+                                <img class="w-full h-64 rounded-t-2xl" src="/images/webDesigner3.png" alt="Trulli">
                                 <figcaption class="pl-11 pt-6 max-sm:pl-0">
                                     <div class="flex items-center">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 6 6"
@@ -462,7 +461,7 @@
         <div class="w-full max-sm:w-[90%] max-w-1170 mx-auto md:max-w-screen-md lg:max-w-lg xl:max-w-1170">
             <div class="flex max-sm:flex-col">
                 <div class="w-30 pr-20 md:max-lg:pr-12 max-sm:w-full max-sm:pr-0">
-                    <img class="h-5 max-sm:w-[30%]" src="./images/logoFooter.png" alt="Logo">
+                    <img class="h-5 max-sm:w-[30%]" src="/images/logoFooter.png" alt="Logo">
                     <p
                         class="mt-8 w-64 md:max-lg:max-w-full text-[#BFBCB2] font-poppins text-sm font-normal leading-6 max-sm:w-full">
                         Need to help for your dream Career? trust us. With Lesson, study becomes a lot easier with us.
@@ -555,7 +554,7 @@
             </div>
         </div>
     </footer>
-    <script src="./handle.js"></script>
+    <script type="module" src="./handle.js"></script>
 </body>
 
 </html>
